--- a/ficha.html
+++ b/ficha.html
@@ -9,9 +9,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-50 min-h-screen flex flex-col transition-colors duration-[100ms] ease-in-out">
+<body class="bg-gray-50 min-h-screen flex flex-col transition-colors duration-[3000ms] ease-in-out">
 
-<header id="header" class="bg-blue-600 p-6 text-center shadow-md transition-colors duration-[100ms]">
+<header id="header" class="bg-blue-600 p-6 text-center shadow-md transition-colors duration-[3000ms]">
   <h1 class="text-3xl font-bold text-white flex items-center justify-center">
     <i class="fa-solid fa-graduation-cap mr-2"></i>Ficha de ejercicios
   </h1>
@@ -42,10 +42,13 @@
   <div id="dropZone"
     class="group text-blue-500 w-full min-h-[50vh] flex flex-col justify-center items-center
            border-4 border-dashed border-gray-300 rounded-2xl p-6 cursor-pointer
-           bg-white transition-all duration-300 shadow-sm hover:bg-gray-100">
+           bg-white transition-all duration-500 shadow-sm hover:bg-gray-100">
 
-    <div class="text-7xl mb-6 transition-transform duration-300 group-hover:scale-110">
-      <i class="fa-solid fa-camera"></i>
+    <!-- ICONO -->
+    <div class="text-6xl md:text-8xl text-gray-300 mb-6 
+                group-hover:text-blue-600 transition transform 
+                group-hover:scale-110 duration-300">
+      <i class="fa-solid fa-file-arrow-up"></i>
     </div>
 
     <p id="fileName" class="text-2xl font-medium text-center px-4">
@@ -56,9 +59,9 @@
     <input type="file" id="fileInput" accept="image/*" multiple hidden>
   </div>
 
-  <!-- BOTÓN DE ENVÍO -->
+  <!-- BOTÓN -->
   <div class="text-center mt-8">
-    <button id="btnGenerar" onclick="enviarAN8N()"
+    <button onclick="enviarAN8N()"
       class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg transition-colors duration-300">
       Generar PDF
     </button>
@@ -72,7 +75,6 @@ const subtitulo = document.getElementById("subtitulo");
 const dropZone = document.getElementById("dropZone");
 const fileInput = document.getElementById("fileInput");
 const fileName = document.getElementById("fileName");
-const btnGenerar = document.getElementById("btnGenerar");
 
 let archivos = [];
 
@@ -80,30 +82,25 @@ const temas = {
   defecto: {
     header: "bg-blue-600",
     drop: "text-blue-500 hover:bg-gradient-to-br hover:from-blue-100 hover:to-blue-200 hover:border-blue-400",
-    btn: "bg-blue-600 hover:bg-blue-700",
     texto: "Selecciona curso y dificultad"
   },
   facil: {
     header: "bg-green-600",
     drop: "text-green-600 hover:bg-gradient-to-br hover:from-green-100 hover:to-green-200 hover:border-green-400",
-    btn: "bg-green-600 hover:bg-green-700",
     texto: "Nivel fácil"
   },
   medio: {
     header: "bg-yellow-500",
     drop: "text-yellow-600 hover:bg-gradient-to-br hover:from-yellow-100 hover:to-yellow-200 hover:border-yellow-400",
-    btn: "bg-yellow-500 hover:bg-yellow-600",
     texto: "Nivel medio"
   },
   dificil: {
     header: "bg-red-600",
     drop: "text-red-600 hover:bg-gradient-to-br hover:from-red-100 hover:to-red-200 hover:border-red-400",
-    btn: "bg-red-600 hover:bg-red-700",
     texto: "Nivel difícil"
   }
 };
 
-// Cambiar tema según nivel
 function cambiarNivel() {
   const nivel = document.getElementById("nivel").value;
   const tema = temas[nivel] || temas.defecto;
@@ -117,14 +114,10 @@ function cambiarNivel() {
     bg-white transition-all duration-500 shadow-sm
     ${tema.drop}
   `;
-
-  btnGenerar.className = `text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg transition-colors duration-300 ${tema.btn}`;
 }
 
-// Abrir selector de archivos al tocar dropZone
 dropZone.addEventListener("click", () => fileInput.click());
 
-// Guardar archivos y mostrar cantidad
 fileInput.addEventListener("change", () => {
   archivos = [...fileInput.files];
   fileName.textContent = archivos.length
@@ -132,7 +125,6 @@ fileInput.addEventListener("change", () => {
     : "Toca para subir una imagen de los ejercicios";
 });
 
-// Función de envío a n8n (lista para webhook)
 function enviarAN8N() {
   const curso = document.getElementById("curso").value;
   const nivel = document.getElementById("nivel").value;
