--- a/ficha.html
+++ b/ficha.html
@@ -40,22 +40,22 @@
 
   <!-- DROPZONE -->
   <div id="dropZone"
-    class="group text-blue-500 w-full min-h-[50vh] flex flex-col justify-center items-center
+    class="group w-full min-h-[50vh] flex flex-col justify-center items-center
            border-4 border-dashed border-gray-300 rounded-2xl p-6 cursor-pointer
-           bg-white transition-all duration-500 shadow-sm hover:bg-gray-100">
+           bg-white transition-all duration-[3000ms] shadow-sm">
 
     <!-- ICONO -->
-    <div class="text-6xl md:text-8xl text-gray-300 mb-6 
-                group-hover:text-blue-600 transition transform 
-                group-hover:scale-110 duration-300">
+    <div id="iconoDrop"
+      class="text-6xl md:text-8xl text-gray-300 mb-6
+             transition-all duration-[3000ms] transform
+             group-hover:scale-110">
       <i class="fa-solid fa-file-arrow-up"></i>
     </div>
 
-    <p id="fileName" class="text-2xl font-medium text-center px-4">
+    <p id="fileName" class="text-2xl font-medium text-center px-4 transition-colors duration-[3000ms]">
       Toca para subir una imagen de los ejercicios
     </p>
 
-    <!-- input escondido -->
     <input type="file" id="fileInput" accept="image/*" multiple hidden>
   </div>
 
@@ -73,6 +73,7 @@
 const header = document.getElementById("header");
 const subtitulo = document.getElementById("subtitulo");
 const dropZone = document.getElementById("dropZone");
+const iconoDrop = document.getElementById("iconoDrop");
 const fileInput = document.getElementById("fileInput");
 const fileName = document.getElementById("fileName");
 
@@ -82,21 +83,25 @@ const temas = {
   defecto: {
     header: "bg-blue-600",
     drop: "text-blue-500 hover:bg-gradient-to-br hover:from-blue-100 hover:to-blue-200 hover:border-blue-400",
+    icono: "text-blue-600",
     texto: "Selecciona curso y dificultad"
   },
   facil: {
     header: "bg-green-600",
     drop: "text-green-600 hover:bg-gradient-to-br hover:from-green-100 hover:to-green-200 hover:border-green-400",
+    icono: "text-green-600",
     texto: "Nivel fácil"
   },
   medio: {
     header: "bg-yellow-500",
     drop: "text-yellow-600 hover:bg-gradient-to-br hover:from-yellow-100 hover:to-yellow-200 hover:border-yellow-400",
+    icono: "text-yellow-500",
     texto: "Nivel medio"
   },
   dificil: {
     header: "bg-red-600",
     drop: "text-red-600 hover:bg-gradient-to-br hover:from-red-100 hover:to-red-200 hover:border-red-400",
+    icono: "text-red-600",
     texto: "Nivel difícil"
   }
 };
@@ -111,13 +116,22 @@ function cambiarNivel() {
   dropZone.className = `
     group w-full min-h-[50vh] flex flex-col justify-center items-center
     border-4 border-dashed rounded-2xl p-6 cursor-pointer
-    bg-white transition-all duration-500 shadow-sm
+    bg-white transition-all duration-[3000ms] shadow-sm
     ${tema.drop}
+  `;
+
+  iconoDrop.className = `
+    text-6xl md:text-8xl mb-6 transform
+    transition-all duration-[3000ms]
+    group-hover:scale-110
+    ${tema.icono}
   `;
 }
 
+// Click para subir archivos
 dropZone.addEventListener("click", () => fileInput.click());
 
+// Mostrar cantidad
 fileInput.addEventListener("change", () => {
   archivos = [...fileInput.files];
   fileName.textContent = archivos.length
