--- a/ficha.html
+++ b/ficha.html
@@ -11,11 +11,14 @@
 
 <body class="bg-gray-50 min-h-screen flex flex-col transition-colors duration-[3000ms] ease-in-out">
 
-<header id="header" class="bg-blue-600 p-6 text-center shadow-md transition-colors duration-[3000ms]">
+<header id="header"
+  class="bg-blue-600 p-6 text-center shadow-md transition-colors duration-[3000ms]">
   <h1 class="text-3xl font-bold text-white flex items-center justify-center">
     <i class="fa-solid fa-graduation-cap mr-2"></i>Ficha de ejercicios
   </h1>
-  <p id="subtitulo" class="text-blue-100 mt-1">Selecciona curso y dificultad</p>
+  <p id="subtitulo" class="text-blue-100 mt-1">
+    Selecciona curso y dificultad
+  </p>
 </header>
 
 <main class="w-full max-w-6xl mx-auto p-8 flex-grow">
@@ -29,7 +32,8 @@
 
     <div>
       <label class="block font-bold mb-2 text-gray-700">Nivel</label>
-      <select id="nivel" onchange="cambiarNivel()" class="w-full p-4 border rounded-xl font-bold">
+      <select id="nivel" onchange="cambiarNivel()"
+        class="w-full p-4 border rounded-xl font-bold">
         <option value="">Selecciona nivel</option>
         <option value="facil">Fácil</option>
         <option value="medio">Medio</option>
@@ -44,7 +48,6 @@
            border-4 border-dashed border-gray-300 rounded-2xl p-6 cursor-pointer
            bg-white transition-all duration-[3000ms] shadow-sm">
 
-    <!-- ICONO -->
     <div id="iconoDrop"
       class="text-6xl md:text-8xl text-gray-300 mb-6
              transition-all duration-[3000ms] transform
@@ -52,7 +55,9 @@
       <i class="fa-solid fa-file-arrow-up"></i>
     </div>
 
-    <p id="fileName" class="text-2xl font-medium text-center px-4 transition-colors duration-[3000ms]">
+    <p id="fileName"
+       class="text-2xl font-medium text-center px-4
+              transition-colors duration-[3000ms]">
       Toca para subir una imagen de los ejercicios
     </p>
 
@@ -61,8 +66,10 @@
 
   <!-- BOTÓN -->
   <div class="text-center mt-8">
-    <button onclick="enviarAN8N()"
-      class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg transition-colors duration-300">
+    <button id="btnEnviar" onclick="enviarAN8N()"
+      class="bg-blue-600 hover:bg-blue-700
+             text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg
+             transition-colors duration-[3000ms]">
       Generar PDF
     </button>
   </div>
@@ -74,6 +81,7 @@ const header = document.getElementById("header");
 const subtitulo = document.getElementById("subtitulo");
 const dropZone = document.getElementById("dropZone");
 const iconoDrop = document.getElementById("iconoDrop");
+const btnEnviar = document.getElementById("btnEnviar");
 const fileInput = document.getElementById("fileInput");
 const fileName = document.getElementById("fileName");
 
@@ -84,24 +92,28 @@ const temas = {
     header: "bg-blue-600",
     drop: "text-blue-500 hover:bg-gradient-to-br hover:from-blue-100 hover:to-blue-200 hover:border-blue-400",
     icono: "text-blue-600",
+    boton: "bg-blue-600 hover:bg-blue-700",
     texto: "Selecciona curso y dificultad"
   },
   facil: {
     header: "bg-green-600",
     drop: "text-green-600 hover:bg-gradient-to-br hover:from-green-100 hover:to-green-200 hover:border-green-400",
     icono: "text-green-600",
+    boton: "bg-green-600 hover:bg-green-700",
     texto: "Nivel fácil"
   },
   medio: {
     header: "bg-yellow-500",
     drop: "text-yellow-600 hover:bg-gradient-to-br hover:from-yellow-100 hover:to-yellow-200 hover:border-yellow-400",
     icono: "text-yellow-500",
+    boton: "bg-yellow-500 hover:bg-yellow-600",
     texto: "Nivel medio"
   },
   dificil: {
     header: "bg-red-600",
     drop: "text-red-600 hover:bg-gradient-to-br hover:from-red-100 hover:to-red-200 hover:border-red-400",
     icono: "text-red-600",
+    boton: "bg-red-600 hover:bg-red-700",
     texto: "Nivel difícil"
   }
 };
@@ -110,7 +122,9 @@ function cambiarNivel() {
   const nivel = document.getElementById("nivel").value;
   const tema = temas[nivel] || temas.defecto;
 
-  header.className = `p-6 text-center shadow-md transition-colors duration-[3000ms] ${tema.header}`;
+  header.className =
+    `p-6 text-center shadow-md transition-colors duration-[3000ms] ${tema.header}`;
+
   subtitulo.textContent = tema.texto;
 
   dropZone.className = `
@@ -125,6 +139,12 @@ function cambiarNivel() {
     transition-all duration-[3000ms]
     group-hover:scale-110
     ${tema.icono}
+  `;
+
+  btnEnviar.className = `
+    ${tema.boton}
+    text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg
+    transition-colors duration-[3000ms]
   `;
 }
 
